--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -1,4 +1,4 @@
-name: CI
+name: macOS
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
