--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,10 +9,12 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - uses: compnerd/gha-setup-swift@main
+        with:
+          branch: swift-5.6-release
+          tag: 5.6-RELEASE
+  
+      - uses: actions/checkout@v2
+      - run: swift build
+      - run: swift test
