--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,19 +2,22 @@ name: Windows
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["**"]
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: compnerd/gha-setup-swift@main
+      - uses: actions/checkout@v4
+
+      # ① Install Swift for Windows
+      - name: Set up Swift 6.1
+        uses: compnerd/gha-setup-swift@main
         with:
-          branch: swift-5.8-release
-          tag: 5.8-RELEASE
-  
-      - uses: actions/checkout@v2
+          branch: swift-6.1-release   # release branch
+          tag:    6.1-RELEASE         # exact toolchain tag
+
+      # ② Build & test
+      - run: swift --version          # sanity-check
       - run: swift build
       - run: swift test
